Afegir favicon.svg

--- a/DashboardIncidencies/index.html
+++ b/DashboardIncidencies/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ca">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quadre de Comandament d'Incidències</title>
+    <title>Quadre de Comandament d'IncidÃ¨ncies</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -45,4 +45,5 @@
     <div id="root"></div>
 </body>
 </html>
+
 
