--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <main class="container">
-        <div id="apps-container">
+        <div id="apps-grid" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
             <!-- Les categories i targetes de les apps es generaran aquí amb JavaScript -->
         </div>
     </main>
