--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     </main>
 
     <footer class="container text-center py-4 mt-5 border-top">
-        <p class="mb-1">Aplicacions creades per Felip Sarroca amb l'assistència de la IA.</p>
+        <p class="mb-1">Aplicacions creades per Felip Sarroca amb l'assistència de la IA</p>
         <p>
-            <a href="https://github.com/felipsarroca/util-apps" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-muted">
-                Codi font a GitHub
+            <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.ca" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-muted">
+                <img src="https://licensebuttons.net/l/by-nc-sa/4.0/88x31.png" alt="Llicència Creative Commons" class="license-icon">
+                Obres sota llicència CC BY-NC-SA 4.0
             </a>
         </p>
     </footer>
