--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Util-Apps de Felip Sarroca</title>
+    <title>Aplicacions d'utilitats de Felip Sarroca</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛠️</text></svg>">
 </head>
 <body>
     <header class="container text-center my-5">
-        <h1>Les meves Util-Apps</h1>
+        <h1>Les meves aplicacions d'utilitats</h1>
         <p class="lead">Una col·lecció d'aplicacions útils per a la gestió, les finances i altres tasques.</p>
     </header>
 
