--- a/Ruleta/index.html
+++ b/Ruleta/index.html
@@ -35,7 +35,7 @@
           </button>
           <div class="result-card">
             <h2>Resultat</h2>
-            <p id="resultText">Encara no hi ha cap resultat. Prem el botó per fer un gir.</p>
+            <p id="resultText">Prem el bot&oacute; per fer el primer gir.</p>
             <div class="result-actions">
               <button id="removeButton" type="button" class="secondary" disabled>
                 Elimina el resultat
@@ -83,6 +83,21 @@
           </p>
         </div>
       </footer>
+    </div>
+
+    <div class="winner-popup" id="winnerPopup" role="alert" aria-live="assertive">
+      <div class="popup-content">
+        <div class="confetti" aria-hidden="true">
+          <span>🎊</span>
+          <span>✨</span>
+          <span>🎈</span>
+          <span>🎉</span>
+          <span>🥳</span>
+        </div>
+        <div class="popup-icon" aria-hidden="true">🎉</div>
+        <p class="popup-label">Ha sortit</p>
+        <p class="popup-name" id="winnerName">—</p>
+      </div>
     </div>
 
     <audio id="rouletteAudio" src="./ruleta.mp3" preload="auto"></audio>
