Millores visuals de popup i altres - Codex
 - He reordenat la interfície: la ruleta ocupa tot el panell, els botons de gestió passen al costat dret i l’anotació “Resultat” desapareix (index.html:50, index.html:59, style.css:231). També he reduït el centre i he inserit
    l’indicador uns quants píxels dins del cercle per evitar solapaments (style.css:110, style.css:138).
  - El popup del guanyador s’ha redissenyat amb confeti animat i estil vitrificat, sense el text “Ha sortit”, i ara es tanca tot sol als 5 s o quan es toca qualsevol punt de la pantalla (index.html:85, style.css:487, style.css:515,
    script.js:405, script.js:415). El nom queda en primer pla i el temporitzador es reinicia a cada resultat (script.js:415-429).
  - L’experiència és més fluida: fer clic o tocar la ruleta també inicia el gir, es poden fer desaparèixer els popups tocant qualsevol lloc i els missatges d’estat s’han reorganitzat al panell lateral (script.js:37, script.js:51,
    script.js:78, script.js:220, script.js:233).

--- a/Ruleta/index.html
+++ b/Ruleta/index.html
@@ -33,18 +33,6 @@
           <button id="spinButton" class="spin-button" type="button">
             Gira la ruleta
           </button>
-          <div class="result-card">
-            <h2>Resultat</h2>
-            <p id="resultText">Prem el bot&oacute; per fer el primer gir.</p>
-            <div class="result-actions">
-              <button id="removeButton" type="button" class="secondary" disabled>
-                Elimina el resultat
-              </button>
-              <button id="resetButton" type="button" class="ghost" disabled>
-                Reinicia la llista
-              </button>
-            </div>
-          </div>
         </section>
 
         <section class="controls-panel">
@@ -68,6 +56,15 @@
               Recupera llista inicial
             </button>
           </div>
+          <div class="controls-actions">
+            <button id="removeButton" type="button" class="secondary" disabled>
+              Elimina el resultat
+            </button>
+            <button id="resetButton" type="button" class="ghost" disabled>
+              Reinicia la llista
+            </button>
+          </div>
+          <p id="resultText" class="info-message">Prem el bot&oacute; per fer el primer gir.</p>
         </section>
       </main>
 
@@ -95,7 +92,6 @@
           <span>🥳</span>
         </div>
         <div class="popup-icon" aria-hidden="true">🎉</div>
-        <p class="popup-label">Ha sortit</p>
         <p class="popup-name" id="winnerName">—</p>
       </div>
     </div>
