Millores de Codex i favicon
 - He afegit el favicon i la icona ruleta.svg al capçal de l’app perquè la pestanya i el títol tinguin una identitat visual clara (index.html:13, index.html:20).
  - He redissenyat el pointer superior amb una fletxa degradada, mig dins i mig fora del cercle, i he distribuït els controls del resultat a la columna dreta perquè el canvas tingui tot l’espai central (style.css:62, style.css:158,
    index.html:63).
  - Les etiquetes de cada segment ara redueixen la mida de lletra i es reparteixen en fins a tres línies, de manera que tot el text queda llegible sense retallades (script.js:276, script.js:416).
  - He suavitzat el commutador “Mode sense repeticions” perquè el botó interior no surti del track i he ajustat la secció de control, el text informatiu i l’alçada del peu per guanyar aire (style.css:251, style.css:293, style.css:393).
  - El popup de guanyador es tanca sol als 5 s, en tocar la pantalla o la ruleta, i ara també pots iniciar el gir directament clicant el canvas (script.js:36, script.js:52, script.js:478).

--- a/Ruleta/index.html
+++ b/Ruleta/index.html
@@ -10,16 +10,20 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Nunito:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="app-shell">
       <header class="top-bar">
         <div class="headline">
-          <h1>Ruleta interactiva</h1>
-          <p>
-            Introdueix els elements que vulguis al llistat, actualitza la ruleta i fes-la girar per obtenir un resultat aleatori.
-          </p>
+          <img src="./ruleta.svg" alt="Icona de la ruleta" class="headline-icon" />
+          <div class="headline-text">
+            <h1>Ruleta interactiva</h1>
+            <p>
+              Introdueix els elements que vulguis al llistat, actualitza la ruleta i fes-la girar per obtenir un resultat aleatori.
+            </p>
+          </div>
         </div>
         <div class="status-chip" id="statusChip">Preparada</div>
       </header>
@@ -27,7 +31,7 @@
       <main class="layout">
         <section class="wheel-panel">
           <div class="wheel-wrapper">
-            <canvas id="wheelCanvas" width="700" height="700" aria-label="Ruleta de selecció"></canvas>
+            <canvas id="wheelCanvas" width="700" height="700" aria-label="Ruleta de selecci&oacute;"></canvas>
             <div class="wheel-pointer" aria-hidden="true"></div>
           </div>
           <button id="spinButton" class="spin-button" type="button">
@@ -44,7 +48,7 @@
           </div>
           <textarea
             id="entriesInput"
-            placeholder="Escriu un element per línia&#10;Exemple:&#10;Maria&#10;Joan&#10;Arnau&#10;Projecte A"
+            placeholder="Escriu un element per l&iacute;nia&#10;Exemple:&#10;Maria&#10;Joan&#10;Arnau&#10;Projecte A"
           ></textarea>
           <div class="options">
             <label class="option-toggle">
