--- a/Votacions (ncomplet)/index.html
+++ b/Votacions (ncomplet)/index.html
@@ -7,15 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="split left">
-            <h1>Prepara una activitat</h1>
-            <a href="professor.html" class="button">Començar</a>
-        </div>
-        <div class="split right">
+    <div class="main-container">
+        <div class="student-section">
             <h1>Participa en una activitat</h1>
-            <input type="text" placeholder="Introdueix el codi" id="activity-code">
-            <a href="#" class="button" id="participate-btn">Participa</a>
+            <div class="code-input-container">
+                <input type="text" placeholder="Introdueix el codi" id="activity-code">
+                <button class="button" id="participate-btn">Participa</button>
+            </div>
+        </div>
+        <div class="professor-section">
+            <h2>Prepara una activitat</h2>
+            <div class="card-container">
+                <a href="professor.html?activity=brainstorm" class="card">
+                    <h3>💭 Pluja d’idees</h3>
+                </a>
+                <a href="professor.html?activity=voting" class="card">
+                    <h3>🗳️ Votació</h3>
+                </a>
+                <a href="professor.html?activity=brainstorm-voting" class="card">
+                    <h3>💡 Pluja d’idees + votació</h3>
+                </a>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
