--- a/Votacions (ncomplet)/alumne.html
+++ b/Votacions (ncomplet)/alumne.html
@@ -7,11 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="participation-container">
-            <h1 id="activity-title">Títol de l'activitat</h1>
-            <!-- El contingut dinàmic anirà aquí -->
-        </div>
+    <div class="content-container participation-container">
+        <h1 id="activity-title">Carregant activitat...</h1>
+        <!-- El contingut dinàmic de l'activitat anirà aquí -->
     </div>
     <script src="script.js"></script>
 </body>
