--- a/Votacions/alumne.html
+++ b/Votacions/alumne.html
@@ -11,6 +11,7 @@
         <h1 id="activity-title">Carregant activitat...</h1>
         <!-- El contingut dinàmic de l'activitat anirà aquí -->
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.4.7/peerjs.min.js"></script>
     <script src="script.js"></script>
     <script src="webrtc.js"></script>
 </body>
