--- a/Votacions/professor.html
+++ b/Votacions/professor.html
@@ -57,6 +57,7 @@ Groc" required></textarea>
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.4.7/peerjs.min.js"></script>
     <script src="script.js"></script>
     <script src="webrtc.js"></script>
 </body>
