--- a/Votacions/index.html
+++ b/Votacions/index.html
@@ -30,6 +30,7 @@
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.4.7/peerjs.min.js"></script>
     <script src="script.js"></script>
     <script src="webrtc.js"></script>
 </body>
