--- a/Votacio/activity.html
+++ b/Votacio/activity.html
@@ -37,7 +37,10 @@
         </form>
         <div id="poll-options-container">
             <p id="votes-left-info"></p>
-            <!-- Les opcions de votació de l'alumne aniran aquí -->
+            <div id="vote-cards-wrapper">
+                <!-- Les targetes de votació de l'alumne aniran aquí -->
+            </div>
+            <button id="submit-votes-btn" class="hidden">Envia Vots</button>
         </div>
     </div>
 
