--- a/Votacio/config.html
+++ b/Votacio/config.html
@@ -18,7 +18,7 @@
                 <!-- Els camps del formulari es generaran aquí dinàmicament -->
             </div>
             <button type="submit" class="launch-button">
-                <i class="fa-solid fa-rocket"></i> Generar Codi i Llançar
+                <i class="fa-solid fa-rocket"></i> Generar codi
             </button>
         </form>
     </div>
