--- a/Votacio/config.html
+++ b/Votacio/config.html
@@ -10,16 +10,16 @@
 <body>
     <div class="config-container">
         <div class="config-header">
-            <h1 id="config-title">Configurar Activitat</h1>
-            <p>Defineix els paràmetres de la teva activitat i llança-la a la teva classe.</p>
+            <i id="config-icon" class="fa-solid"></i>
+            <div class="header-text">
+                <h1 id="config-title">Configurar Activitat</h1>
+                <p>Defineix els paràmetres de la teva activitat i llança-la a la teva classe.</p>
+            </div>
         </div>
         <form id="config-form">
             <div id="config-fields" class="form-fields">
                 <!-- Els camps del formulari es generaran aquí dinàmicament -->
             </div>
-            <button type="submit" class="launch-button">
-                <i class="fa-solid fa-rocket"></i> Generar codi
-            </button>
         </form>
     </div>
     <script src="config.js"></script>
