Millores directe votacions

--- a/Votacio/activity.html
+++ b/Votacio/activity.html
@@ -13,7 +13,10 @@
             <h1 id="activity-title">Carregant...</h1>
             <div class="session-details">
                 <div id="status-indicator">Connectant...</div>
-                <div class="detail-box">Codi: <strong id="session-code">----</strong></div>
+                <div id="session-code-wrapper">
+                    <span>Codi de la sessió</span>
+                    <div id="session-code">----</div>
+                </div>
                 <div class="detail-box">Participants: <strong id="participant-count">0</strong></div>
             </div>
         </div>
