--- a/Votacio/activity.html
+++ b/Votacio/activity.html
@@ -13,19 +13,14 @@
             <h1 id="activity-title">Carregant...</h1>
             <div class="session-details">
                 <div id="status-indicator">Connectant...</div>
+                <div class="detail-box">Codi: <strong id="session-code">----</strong></div>
                 <div class="detail-box">Participants: <strong id="participant-count">0</strong></div>
             </div>
         </div>
     </header>
 
-    <main>
-        <section id="session-code-area">
-            <span>Codi per unir-se a la sessió</span>
-            <div id="session-code">----</div>
-        </section>
-        <div id="live-results-container">
-            <!-- Els resultats dinàmics aniran aquí -->
-        </div>
+    <main id="live-results-container">
+        <!-- Els resultats dinàmics aniran aquí -->
     </main>
 
     <footer id="activity-controls" class="hidden">
