--- a/Votacio/config.html
+++ b/Votacio/config.html
@@ -10,7 +10,7 @@
 <body>
     <div class="config-container">
         <div class="config-header">
-            <div class="header-content">
+            <div class="header-flex">
                 <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%234a90e2'%3E%3Cpath d='M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z'/%3E%3C/svg%3E" alt="Voting Icon" class="header-icon">
                 <div>
                     <h1 id="config-title">Configurar Activitat</h1>
@@ -22,6 +22,9 @@
             <div id="config-fields" class="form-fields">
                 <!-- Els camps del formulari es generaran aquí dinàmicament -->
             </div>
+            <button type="submit" class="launch-button">
+                <i class="fa-solid fa-rocket"></i> Generar codi
+            </button>
         </form>
     </div>
     <script src="config.js"></script>
