--- a/Votacio/activity.html
+++ b/Votacio/activity.html
@@ -19,8 +19,28 @@
         </div>
     </header>
 
-    <main id="live-results-container">
-        <!-- Els resultats dinàmics aniran aquí -->
+    <main class="live-layout">
+        <section id="live-results-container" class="live-feed">
+            <!-- Els resultats dinàmics aniran aquí -->
+        </section>
+        <aside class="live-sidebar">
+            <div class="sidebar-card">
+                <h2>Panell ràpid</h2>
+                <p>Comparteix aquest codi amb l’alumnat i segueix l’activitat en directe.</p>
+                <div class="sidebar-highlight">
+                    <span class="label">Codi</span>
+                    <span id="session-code-large">----</span>
+                </div>
+                <div class="sidebar-highlight">
+                    <span class="label">Participants</span>
+                    <span id="sidebar-participants">0</span>
+                </div>
+            </div>
+            <div class="sidebar-card" id="phase-card">
+                <h3>Fase actual</h3>
+                <p id="phase-description">Configurant la sessió...</p>
+            </div>
+        </aside>
     </main>
 
     <footer id="activity-controls" class="hidden">
