--- a/Votacio/activity.html
+++ b/Votacio/activity.html
@@ -50,6 +50,7 @@
 
     <!-- Aquesta secció és per a la interacció de l'alumne -->
     <div id="student-interaction-zone" class="hidden">
+        <h2 id="student-question" class="student-question hidden"></h2>
         <form id="idea-form">
             <p id="ideas-left-info"></p>
             <textarea id="idea-input" placeholder="Escriu la teva idea..." required></textarea>
