--- a/Votacio/activity.html
+++ b/Votacio/activity.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ca">
 <head>
     <meta charset="UTF-8">
@@ -37,12 +37,12 @@
                 <h3>Fase actual</h3>
                 <p id="phase-description">Configurant la sessió...</p>
             </div>
+            <button id="close-activity-btn" class="control-btn danger-btn hidden"><i class="fa-solid fa-power-off"></i> Tanca l'activitat</button>
         </aside>
     </main>
 
     <footer id="activity-controls" class="hidden">
         <button id="start-voting-btn" class="control-btn hidden"><i class="fa-solid fa-play"></i> Inicia la votació</button>
-        <button id="close-activity-btn" class="control-btn"><i class="fa-solid fa-power-off"></i> Tanca l'activitat</button>
     </footer>
 
     <!-- Aquesta secció és per a la interacció de l'alumne -->
