--- a/Votacio/index.html
+++ b/Votacio/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ca">
 <head>
     <meta charset="UTF-8">
@@ -15,23 +15,35 @@
             <div class="home-container">
                 <!-- Secció Professor (1/3) -->
                 <div class="teacher-zone">
-                    <h3>Hola!</h3>
+                    <h3>Organitza...</h3>
                     <p>Tria una activitat per començar.</p>
                     <div class="teacher-cards">
                         <div class="activity-card" data-activity="brainstorm">
-                            <i class="fa-solid fa-lightbulb"></i>
-                            <h4>Pluja d'idees</h4>
-                            <p>Recull aportacions de forma ràpida i visual.</p>
+                            <div class="activity-illustration">
+                                <i class="fa-solid fa-lightbulb"></i>
+                            </div>
+                            <div class="activity-info">
+                                <h4>Pluja d'idees</h4>
+                                <p>Recull aportacions de forma ràpida i visual.</p>
+                            </div>
                         </div>
                         <div class="activity-card" data-activity="poll">
-                            <i class="fa-solid fa-check-to-slot"></i>
-                            <h4>Votació</h4>
-                            <p>Planteja opcions i obté resultats a l'instant.</p>
+                            <div class="activity-illustration">
+                                <i class="fa-solid fa-check-to-slot"></i>
+                            </div>
+                            <div class="activity-info">
+                                <h4>Votació</h4>
+                                <p>Planteja opcions i obtén resultats a l'instant.</p>
+                            </div>
                         </div>
                         <div class="activity-card" data-activity="brainstorm-poll">
-                            <i class="fa-solid fa-bolt"></i>
-                            <h4>Combinada</h4>
-                            <p>Recull idees i després vota les millors.</p>
+                            <div class="activity-illustration">
+                                <i class="fa-solid fa-bolt"></i>
+                            </div>
+                            <div class="activity-info">
+                                <h4>Combinada</h4>
+                                <p>Recull idees i després vota les millors.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -51,10 +63,6 @@
                 </div>
             </div>
         </section>
-
-        
-
-        
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.4.7/peerjs.min.js"></script>
