--- a/Votacio/config.html
+++ b/Votacio/config.html
@@ -12,7 +12,7 @@
     <div class="config-container">
         <div class="config-header">
             <div class="header-flex">
-                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%234a90e2'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z'/%3E%3C/svg%3E" alt="Voting Icon" class="header-icon">
+                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%234a90e2'%3E%3Cpath d='M19.14 12.94c.04-.31.06-.63.06-.94s-.02-.63-.06-.94l2.03-1.58a.5.5 0 00.12-.62l-1.92-3.32a.5.5 0 00-.6-.22l-2.39.96a7.51 7.51 0 00-1.62-.94l-.36-2.54a.5.5 0 00-.5-.42h-3.86a.5.5 0 00-.5.42l-.36 2.54c-.57.24-1.11.55-1.62.94l-2.39-.96a.5.5 0 00-.6.22L2.67 7.86a.5.5 0 00.12.62l2.03 1.58c-.04.31-.06.63-.06.94s.02.63.06.94l-2.03 1.58a.5.5 0 00-.12.62l1.92 3.32c.13.22.39.31.62.22l2.39-.96c.5.38 1.05.7 1.62.94l.36 2.54c.05.24.26.42.5.42h3.86c.24 0 .45-.18.5-.42l.36-2.54c.57-.24 1.11-.55 1.62-.94l2.39.96c.23.09.49 0 .62-.22l1.92-3.32a.5.5 0 00-.12-.62l-2.03-1.58zM12 15.5a3.5 3.5 0 110-7 3.5 3.5 0 010 7z'/%3E%3C/svg%3E" alt="Icona de configuració" class="header-icon">
                 <div>
                     <h1 id="config-title">Configurar Activitat</h1>
                     <p>Defineix els paràmetres de la teva activitat i llança-la a la teva classe.</p>
