--- a/Votacio/index.html
+++ b/Votacio/index.html
@@ -46,6 +46,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="teacher-footer">
+                        <svg class="cc-badge" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                            <rect width="64" height="64" rx="12" fill="#111827"/>
+                            <circle cx="32" cy="32" r="22" fill="none" stroke="#ffffff" stroke-width="4"/>
+                            <path d="M24 36c1.4 1.6 3.6 2.6 6 2.6 4.8 0 8.6-3.8 8.6-8.6S34.8 21.4 30 21.4c-2.4 0-4.6 1-6 2.6" stroke="#ffffff" stroke-width="3" fill="none" stroke-linecap="round"/>
+                            <path d="M39 36c-1.4 1.6-3.6 2.6-6 2.6-4.8 0-8.6-3.8-8.6-8.6s3.8-8.6 8.6-8.6c2.4 0 4.6 1 6 2.6" stroke="#ffffff" stroke-width="3" fill="none" stroke-linecap="round"/>
+                        </svg>
+                        <span>
+                            Aplicació creada per Felip Sarroca 
+                            <a href="https://jjdeharo.github.io/directo/" target="_blank" rel="noopener">a partir d'una proposta</a>
+                            de <a href="https://educacion.bilateria.org/" target="_blank" rel="noopener">Juanjo de Haro</a>
+                        </span>
+                    </div>
                 </div>
 
                 <!-- Secció Alumne (2/3) -->
