--- a/Votacio/index.html
+++ b/Votacio/index.html
@@ -13,10 +13,10 @@
         <!-- Pantalla inicial -->
         <section id="home-screen">
             <div class="home-container">
-                <!-- Secció Professor (1/3) -->
+                <!-- Secciï¿½ Professor (1/3) -->
                 <div class="teacher-zone">
                     <h3>Organitza...</h3>
-                    <p>Tria una activitat per començar.</p>
+                    <p>Tria una activitat per comenï¿½ar.</p>
                     <div class="teacher-cards">
                         <div class="activity-card" data-activity="brainstorm">
                             <div class="activity-illustration">
@@ -24,7 +24,7 @@
                             </div>
                             <div class="activity-info">
                                 <h4>Pluja d'idees</h4>
-                                <p>Recull aportacions de forma ràpida i visual.</p>
+                                <p>Recull aportacions de forma rï¿½pida i visual.</p>
                             </div>
                         </div>
                         <div class="activity-card" data-activity="poll">
@@ -32,8 +32,8 @@
                                 <i class="fa-solid fa-check-to-slot"></i>
                             </div>
                             <div class="activity-info">
-                                <h4>Votació</h4>
-                                <p>Planteja opcions i obtén resultats a l'instant.</p>
+                                <h4>Votaciï¿½</h4>
+                                <p>Planteja opcions i obtï¿½n resultats a l'instant.</p>
                             </div>
                         </div>
                         <div class="activity-card" data-activity="brainstorm-poll">
@@ -42,17 +42,25 @@
                             </div>
                             <div class="activity-info">
                                 <h4>Combinada</h4>
-                                <p>Recull idees i després vota les millors.</p>
+                                <p>Recull idees i desprï¿½s vota les millors.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Secció Alumne (2/3) -->
+                    <div class="teacher-footer">
+                        <img src="CC_BY-NC-SA.svg" alt="Creative Commons BY-NC-SA" class="cc-badge" />
+                        <span>
+                            AplicaciÃ³ creada per Felip Sarroca 
+                            <a href="https://jjdeharo.github.io/directo/" target="_blank" rel="noopener">a partir d'una proposta</a>
+                            de <a href="https://educacion.bilateria.org/" target="_blank" rel="noopener">Juanjo de Haro</a>
+                        </span>
+                    </div>
+                <!-- Secciï¿½ Alumne (2/3) -->
                 <div class="student-zone">
                     <div class="student-content">
                         <h1>Entra i participa</h1>
-                        <p>Introdueix el codi de la sessió per unir-t'hi.</p>
+                        <p>Introdueix el codi de la sessiï¿½ per unir-t'hi.</p>
                         <form id="student-join-form">
                             <input type="text" id="session-code-input" placeholder="CODI" required autocomplete="off">
                             <button type="submit">
