--- a/Votacio/index.html
+++ b/Votacio/index.html
@@ -41,7 +41,7 @@
                                 <i class="fa-solid fa-bolt"></i>
                             </div>
                             <div class="activity-info">
-                                <h4>Combinada</h4>
+                                <h4>Pluja d'idees + Votació</h4>
                                 <p>Recull idees i després vota les millors.</p>
                             </div>
                         </div>
@@ -64,6 +64,15 @@
             </div>
         </section>
     </main>
+    <footer class="page-footer">
+        <img src="CC_BY-NC-SA.svg" alt="Creative Commons BY-NC-SA">
+        <span class="credit-text">
+            Aplicació creada per Felip Sarroca
+            <a href="https://jjdeharo.github.io/directo/" target="_blank" rel="noopener noreferrer">a partir d'una proposta</a>
+            de
+            <a href="https://educacion.bilateria.org/" target="_blank" rel="noopener noreferrer">Juanjo de Haro</a>
+        </span>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.4.7/peerjs.min.js"></script>
     <script src="script.js"></script>
